force-app/main/default/objects/ssot__LearnerProgramRequirement__dlm/fields/ssot__LearnerProgramId__c.field-meta.xml
<CustomField>
    <fullName>ssot__LearnerProgramId__c</fullName>
    <label>Learner Program</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LearnerProgramId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>