force-app/main/default/objects/ssot__LearnerProgramRequirement__dlm/fields/ssot__LearningProgramPlanRqmtId__c.field-meta.xml
<CustomField>
    <fullName>ssot__LearningProgramPlanRqmtId__c</fullName>
    <label>Learning Program Plan Requirement</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LearningProgramPlanRqmtId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>