force-app/main/default/objects/ssot__LearnerProgramRequirement__dlm/fields/ssot__rel_1719819809315_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719819809315_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LearnerProgramRequirement_LearningPr_rel</label>
    <referenceTo>ssot__LearningProgramPlanRqmt__dlm</referenceTo>
    <relationshipLabel>LearnerProgramRequirement_LearningPr_rel</relationshipLabel>
    <relationshipName>rel_1719819809315_end</relationshipName>
    <type>Lookup</type>
</CustomField>