force-app/main/default/objects/ssot__LearnerProgramRequirement__dlm/fields/ssot__rel_1719820315301_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719820315301_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LearnerProgramRequirement_LearnerPro_rel</label>
    <referenceTo>ssot__LearnerProgram__dlm</referenceTo>
    <relationshipLabel>LearnerProgramRequirement_LearnerPro_rel</relationshipLabel>
    <relationshipName>rel_1719820315301_end</relationshipName>
    <type>Lookup</type>
</CustomField>